fixed horizontal overflow in sign in pages

--- a/src/app/(authentication)/sign-up/page.module.css
+++ b/src/app/(authentication)/sign-up/page.module.css
@@ -9,6 +9,7 @@
     padding-inline: var(--padding-inline-large);
     background-color: #007acc;
     overflow-y: auto;
+    overflow-x: hidden;
     position: relative;
 }
 
